Fixed dark mode link color.

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -2,4 +2,5 @@
   --background-color: #121212;
   --color: #ffffff;
   --code-background-color: #181818;
+  --link-color: #addafc;
 }
