--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -2,4 +2,5 @@
   --background-color: #fafafa;
   --color: #000000;
   --code-background-color: #f1f1f1;
+  --link-color: #0366d6;
 }
